gl.lineWidth not working with WebGL 2 context
Categories
(Core :: Graphics: CanvasWebGL, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox70 | --- | fixed |
People
(Reporter: holger.seelig, Assigned: greyson.gilbert.oss)
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:67.0) Gecko/20100101 Firefox/67.0
Steps to reproduce:
When creating a WebGL 2 context gl.lineWidth is not working, althougth gl.getParameter(gl.ALIASED_LINE_WIDTH_RANGE) reports a range of [1, 10].
A WebGL 1 context works properly. Also Chrome works properly.
Actual results:
The lineWidth is always 1
Expected results:
gl.lineWidth should operate in the range of gl.ALIASED_LINE_WIDTH_RANGE
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Comment 1•6 years ago
|
||
Because glLineWidth is deprecated in newer versions of core opengl,
we currently ignore lineWidth when using core profile. We should
probably also make ALIASED_LINE_WIDTH_RANGE match this behavior to
lessen confusion.
Comment 3•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Updated•6 years ago
|
Comment 4•6 years ago
|
||
Hello, considering that glLineWidth is deprecated in newer versions of core opengl, what would be the steps to manually verify this bug?
Comment 5•6 years ago
|
||
On a Mac or Linux machine, check about:support and verify that "WebGL 2 Driver Renderer" or "Version" has "Core" in it, and run the testcase.
Comment 6•6 years ago
|
||
Hi, We tried to verify this issue but we don't have CORE for either "WebGL 2 Driver Renderer" or "Version" on either MAC or Ubuntu, I'm not sure how we can verify this on our end, can you please Verify this issue on your end so we can update the flags accordingly ?
as for the test page, I see no difference compared to Chrome.
Comment 7•6 years ago
|
||
Sorry, looks like Mac doesn't say "core", but I'm able to verify it on my machine. We now have the same behavior as Chrome, too.
Description
•