Bug 1560771 - Give proper line width range for core profile r=jgilbert

Because glLineWidth is deprecated in newer versions of core opengl,
we currently ignore lineWidth when using core profile.  We should
probably also make ALIASED_LINE_WIDTH_RANGE match this behavior to
lessen confusion.

Differential Revision: https://phabricator.services.mozilla.com/D41117

--HG--
extra : moz-landing-system : lando