dom/canvas/WebGLContextValidate.cpp
@@ -468,7 +468,12 @@ bool WebGLContext::InitAndValidateGL(FailureReason* const out_failReason) {
 
   ////////////////
 
-  gl->fGetFloatv(LOCAL_GL_ALIASED_LINE_WIDTH_RANGE, mGLAliasedLineWidthRange);
+  if (gl->IsCoreProfile()) {
+    mGLAliasedLineWidthRange[0] = 1.0f;
+    mGLAliasedLineWidthRange[1] = 1.0f;
+  } else {
+    gl->fGetFloatv(LOCAL_GL_ALIASED_LINE_WIDTH_RANGE, mGLAliasedLineWidthRange);
+  }
 
   const GLenum driverPName = gl->IsCoreProfile()
                                  ? LOCAL_GL_POINT_SIZE_RANGE
